--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,19 +22,18 @@
 
 			<div class="text-center">
 				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> Take the Survey</button></a>
-				<a href="/facebook.com"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Murder the innocent</button></a>
+				<a href=#><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Murder the innocent</button></a>
 			</div>
 
 		</div>
 
     <footer class="footer">
       <div class="container">
-	        <p><a href="/api/friends">Matches</a> | <a href="/api/friends">Survey Results</a></p>
+	        <p><a href="/api/users">API List</a> | <a href="/api/friends">Survey Results</a></p>
       </div>
     </footer>
 
 	</div>
-
-
 </body>
 </html>
+
