--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -40,7 +40,7 @@
               <div class="form-group">
                 <label for="question1">You prefer books over parties:</label>
                 <select class="form-control" id="question1">
-                  <option value=null></option>
+                  <option value=null>Select and option</option>
                   <option value=1>1 Not at All</option>
                   <option value=2>2</option>
                   <option value=3>3</option>
@@ -134,8 +134,31 @@
 
       </div>
     </div>
+    <!-- Modal -->
+	<div id="resultsModal" class="modal fade" role="dialog">
+	  <div class="modal-dialog">
+
+	    <!-- Modal content-->
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal">&times;</button>
+	        <h2 class="modal-title"><strong>Best Match</strong></h2>
+	      </div>
+	      <div class="modal-body">
+	        <h2 id="matchName"></h2>
+	        <img id="matchImg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+
+	  </div>
+	</div>
+
   </div>
   <script src="../data/friends.js"></script>
+  <script src="../routing/apiRoutes.js"></script>
   <script type="text/javascript">
   
     $("#add-btn").on("click", function(event) {
@@ -157,6 +180,9 @@
       $.post("/api/new", newUser)
       .done(function(data) {
         alert("Tired of being alone...?");
+      $("#matchName").text(data.name);
+	    $('#matchImg').attr("src", data.photo);
+		  $("#resultsModal").modal('toggle');
       });
     });
   </script>
